[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neuropixel_data_exporter"
version = "2.0.4"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "plotly>=5.20",
    "openpyxl>=3.1",
    "XlsxWriter>=3.1",
    "scipy>=1.10",
    "PySide6>=6.6",
    "QDarkStyle>=3.2",
]

[tool.setuptools.packages.find]
where = ["src"]
